# CAUV_old_software

./: .clang_complete  .hgchurn  .hgignore  CMakeLists.txt  attributions.txt  license.txt  msg-format.txt  pch.h  pylint.rc  readme-code.txt  readme.md  readme.txt  readme_cpp.txt  setup.sh
auv/: CMakeLists.txt  Makefile  readme-auv.txt
auv/SLAM/: CMakeLists.txt  benchmark_matching.cpp  convert_CHIL.py  corner_feature_detector.cpp  corner_feature_detector.h  display_log.cpp  global_feature_extractor.h  graph_optimiser.cpp  graph_optimiser.h  local_feature_extractor.h  manual_layout.cpp  manual_layout_view.cpp  manual_layout_view.h  package.xml  play_log.cpp  ros_save.hpp  setup.py  slam_location.h  sonar_ops.cpp  sonar_ops.h  sonar_path_gen.cpp  surf_extractor.cpp  surf_extractor.h  view_map.cpp
auv/camera/: CMakeLists.txt  camera.cpp  camera.h  camera_observer.cpp  camera_observer.h  client.cpp  client.h  client_test.cpp  img_daemon.cpp  opencv_test.c  server.cpp  server.h  server_shared.h  webcam.h
auv/cmake/: SpreadConfig.cmake  ftdiConfig.cmake
auv/common/: CMakeLists.txt  bash_cout.h  blocking_queue.h  buffers.cpp  buffers.h  cauv_application_message.h  cauv_global.cpp  cauv_global.h  cauv_node.cpp  cauv_node.h  cauv_types.cpp  cauv_types.h  cauv_utils.cpp  cauv_utils.h  colors.h  data_stream.h  data_stream_tools.h  debug.h  image.cpp  image.h  messages.msg  observable.h  streamops.h  vector_streamops.h
auv/control/: CMakeLists.txt  arm_mcb.cpp  arm_mcb.h  barracuda_mcb.cpp  barracuda_mcb.h  can_gate.cpp  can_gate.h  control.cpp  control.h  frames.h  imu.h  mcb.h  package.xml  pid.cpp  pid.h  pressure_imu.h  redherring_mcb.cpp  redherring_mcb.h  sbg_imu.cpp  sbg_imu.h  sim_imu.cpp  sim_imu.h  xsens_imu.cpp  xsens_imu.h
auv/controlv2/: CMakeLists.txt  control.cpp  control.h  xsens_imu.cpp  xsens_imu.h
auv/debug/: CMakeLists.txt  cauv_debug.cpp  cauv_debug.h
auv/fileinput/: CMakeLists.txt  fileinput_node.cpp  fileinput_node.h
auv/gemini/: CMakeLists.txt  fake_gemini.cpp  gemini_node.cpp  gemini_node.h
auv/img/: camera.cpp  camera.h  camera_observer.cpp  camera_observer.h  img_daemon.cpp  opencv_test.c
auv/img-pipeline/: CMakeLists.txt  Image Processor  ImageProcessor.h  blockingQueue.h  blockingQueueBoost.cpp  blockingQueueBoost.h  exception_test.cpp  file_input_node.h  image.h  imageProcessor.cpp  imageProcessor.h  img-pipeline.cpp  img-pipeline.h  main.cpp  node.cpp  node.h  nodeFactory.h  node_test.cpp  pipelineTypes.h  pipeline_types.h  scheduler.cpp  scheduler.h
auv/img-viewer/: CMakeLists.txt  img-viewer.cpp  img-viewer.h
auv/lib/: CMakeLists.txt  Makefile
auv/mcb_bridge/: CMakeLists.txt  can_frame.h  frames.h  mcb_bridge.cpp
auv/model/: CMakeLists.txt  auv_controller.cpp  auv_controller.h  auv_model.cpp  auv_model.h  model_test.cpp
auv/module/: CMakeLists.txt  module.cpp  module.h
auv/pervert/: CMakeLists.txt  pervert.cpp
auv/pinger/: CMakeLists.txt  Exception.h  JackMM.cpp  JackMM.h  Makefile  Makefile.danisuseless  PingerListenD.cpp
auv/python-module/: CMakeLists.txt  cauvinterfacemodule.cpp  emit_generated.h  emit_static.cpp  emit_static.h  pch.h  workarounds.h
auv/sbg-example/: CMakeLists.txt  cube3D.h  ig500.c  ig500.h  main.c  main.cpp  sdlApplication.c  sdlApplication.h
auv/scripting/: AI_classes.py  AI_conditions.py  AI_control_manager.py  AI_detection_process.py  AI_location.py  AI_location_old.py  AI_manager.py  AI_pipeline_manager.py  AI_remote.py  AI_scriptparent.py  AI_task_manager.py  AI_tasks.py  CMakeLists.txt  Jamroot  aiTypes.py  andylatest.pipe  auto.py  battery_monitor.py  breach.mission  brightnessdetect.py  brightnessdetect2.py  brightnessdetect2_print.py  camtest.py  cauvinterfacemodule.cpp  cauvmodule.cpp  cauvnode.py  cauvpython.sh  centretest.py  colourfinder.py  colourfinder2.py  colourfinder2_print.py  confirm.py  daemon_command.py  daemon_man.py  daemon_mon.py  daemonise.py  dfu.py  displacement.py  displacement3.py  displacement_integrator.py  (+73 more)
auv/send/: CMakeLists.txt  send.cpp
auv/sonar/: CMakeLists.txt  display_sonar_observer.cpp  display_sonar_observer.h  seanet_packet.cpp  seanet_packet.h  seanet_serial_port.cpp  seanet_serial_port.h  seanet_sonar.cpp  seanet_sonar.h  sonar.cpp  sonar.h  sonar_accumulator.cpp  sonar_accumulator.h  sonar_observer.cpp  sonar_observer.h  sonar_seanet_packet.cpp  sonar_seanet_packet.h  sonar_serial.cpp  sonar_serial.h  test.cpp  trig.h
auv/temperature/: CMakeLists.txt  TempNode.cpp  TempNode.h
auv/webcam/: CMakeLists.txt  webcam_node.cpp  webcam_node.h
common/: CMakeLists.txt  bounded_float.h  cauv_global.cpp  cauv_global.h  cauv_logo.cpp  cauv_logo.h  cauv_node.cpp  cauv_node.h  cauv_utils.cpp  cauv_utils.h  conic_section.h  data_stream.h  data_stream_tools.h  image.cpp  image.h  mailbox.h  mailbox_monitor.h  math.cpp  math.h  random.h
common/msg_classes/: CMakeLists.txt  base_image.cpp  base_image.h  bounded_float.h  colour.cpp  colour.h  image.cpp  (+3 more)
debug/: CMakeLists.txt  cauv_debug.cpp  cauv_debug.h  package.xml
gui/: .classpath  .project  CMakeLists.txt  config.cauv  package.xml  pch.h  readme-gui.txt
gui-pipeline/: CMakeLists.txt
sim/: CMakeLists.txt  FixedNodeTrackerManipulator.cpp  FixedNodeTrackerManipulator.h  attenuator.h  buoy_test.osgt  conv_svg.py  gen_osg.py  oceanscene.cpp  rivermap.blend  saucemap.blend  sim-main.cpp  sim.cpp  sim2.cpp  sim_camera.cpp  sim_camera.h  sim_sonar.cpp  sim_sonar.h  simnode.cpp  simnode.h  simulator.cpp  simulator.h  validators.cpp  validators.h  worldmodel.cpp  worldmodel.h
utility/: CMakeLists.txt  arrays.h  async-test.cpp  async.h  bash_cout.h  bimap.h  blocking_queue.h  conic_section.h  coordinates.cpp  coordinates.h  daemon.cpp  daemon.h  data_stream.h  data_stream_tools.h  defer.h  enum_class.h  exec.h  files.cpp  files.h  foreach.h  graphviz.h  lock.h  make_unique.h  math.cpp  math.h  observable.h  options.cpp  package.xml  performance.h  pivot.h  qstring.h  qt_streamops.h  random.cpp  ratelimit.cpp  ratelimit.h  rounding.h  serialisation-test.cpp  serialisation-types.h  serialisation.h  streamops.h  (+9 more)
(+2275 files in other folders)
