<package>
  <name>cauv_slam</name>
  <version>1.0.0</version>
  <description>CAUV Simultaneos Localisation And Mapping Package</description>
  <maintainer email="sleeeeep@thejungle.com">Ka</maintainer>
  <author>Cardboard Ant Upbeat Ventures</author>
  <license>CAUV</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>cauv_utility</build_depend>
  <build_depend>cauv_debug</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>libpointmatcher</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>cauv_utility</run_depend>
  <run_depend>cauv_debug</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>opencv2</run_depend>
</package>
